force-app/main/default/objects/feature_request__c/feature_request__c.object-meta.xml
<CustomObject>
    <label>Product Feature Request</label>
    <nameField>
        <label>Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>