force-app/main/default/objects/feature_request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By (account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>