force-app/main/default/objects/feature_request__c/fields/Cost_of_NOT_doing_this__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_NOT_doing_this__c</fullName>
    <label>Cost of not doing this</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>small_churn</fullName>
                <label>Churn of SMALL adv/pub</label>
            </value>
            <value>
                <fullName>large_churn</fullName>
                <label>Churn of LARGE adv/pub</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>