force-app/main/default/objects/feature_request__c/fields/Example_company_that_currently_supports__c.field-meta.xml
<CustomField>
    <fullName>Example_company_that_currently_supports__c</fullName>
    <label>Example company that currently supports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>