force-app/main/default/objects/feature_request__c/fields/Feature_Request__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request__c</fullName>
    <label>Feature Request Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>