force-app/main/default/objects/feature_request__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <inlineHelpText>Estimate the reach of this feature request; 
Would it be valuable for all adv/pubs or some portion of our adv/pubs?</inlineHelpText>
    <label>Estimated Reach of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>&lt;10% of advs/pubs</label>
            </value>
            <value>
                <fullName>10-25% of advs/pubs</fullName>
            </value>
            <value>
                <fullName>25-50% of advs/pubs</fullName>
            </value>
            <value>
                <fullName>50-75% of advs/pubs</fullName>
            </value>
            <value>
                <fullName>100% of advs/pubs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>