force-app/main/default/objects/feature_request__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <label>Related Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>adgem</fullName>
                <label>AdGem</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Sweepstakes</fullName>
                <isActive>false</isActive>
                <label>Sweepstakes</label>
            </value>
            <value>
                <fullName>Telecom</fullName>
                <isActive>false</isActive>
                <label>Telecom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>