force-app/main/default/objects/feature_request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <inlineHelpText>PMs use this status field to identify if the request has been reviewed and communicate back to the requestor if that request is going to be prioritized</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Needs Additional Information</fullName>
            </value>
            <value>
                <fullName>Received &amp; Filed - Not being prioritized</fullName>
            </value>
            <value>
                <fullName>Accepted - Added to Backlog</fullName>
            </value>
            <value>
                <fullName>Accepted - Added to Development Board</fullName>
            </value>
            <value>
                <fullName>Completed/Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>