force-app/main/default/objects/feature_request__c/fields/Request_Type_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_User_Type__c</fullName>
    <label>Request Type (User Type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser use case</fullName>
            </value>
            <value>
                <fullName>Publisher use case</fullName>
            </value>
            <value>
                <fullName>Internal use case</fullName>
                <isActive>false</isActive>
                <label>Internal use case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>