force-app/main/default/objects/feature_request__c/fields/Request_Value_to_AdAction__c.field-meta.xml
<CustomField>
    <fullName>Request_Value_to_AdAction__c</fullName>
    <label>Request Value to AdAction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gain access to new advertisers/publishers</fullName>
            </value>
            <value>
                <fullName>Feature request is supported by our competitors - competitive relevance</fullName>
            </value>
            <value>
                <fullName>Unlock new revenue/scale from existing advertisers/publishers</fullName>
            </value>
            <value>
                <fullName>Inability to support will cause us to lose business</fullName>
            </value>
            <value>
                <fullName>Supports transparency objective (internally or externally)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>