force-app/main/default/objects/feature_request__c/fields/Request_Value_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Request_Value_to_Company__c</fullName>
    <label>Request Value to Adv or Pub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant improvement in user engagement (adv)</fullName>
            </value>
            <value>
                <fullName>Significant improvement in user LTV (adv)</fullName>
            </value>
            <value>
                <fullName>Improvement in user experience with placement (pub)</fullName>
            </value>
            <value>
                <fullName>Lessens integration burden i.e. time, resources (pub)</fullName>
            </value>
            <value>
                <fullName>Eases BI burden (analysis, data aggregation, etc for adv)</fullName>
            </value>
            <value>
                <fullName>Eases BI burden (analysis, data aggregation, etc for pub)</fullName>
            </value>
            <value>
                <fullName>Addresses targeting needs/requirements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>