force-app/main/default/objects/feature_request__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Request Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium-Low</fullName>
            </value>
            <value>
                <fullName>Medium-High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>highest</fullName>
                <label>Highest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>