force-app/main/default/objects/feature_request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>