force-app/main/default/objects/feature_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type_User_Type__c</columns>
    <columns>Related_Product__c</columns>
    <columns>Reach__c</columns>
    <columns>Urgency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>